# gallifrey

./: .gitignore  README.md  Run.md  Workflow.md  main.py  pyproject.toml
agentic/: .env-example  .gitignore  create_dummy_pdf.py  manual_ingest.py  pyproject.toml  test_report_gen.py
agentic/chroma_db/: chroma.sqlite3
agentic/scripts/: agent.py  llm.py  main.py  metrics.py  pdf_ingest.py  reporting.py  routes.py  schemas.py  tools.py  ui.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/control-room/: page.tsx
frontend/src/app/infra/: page.tsx
frontend/src/app/structures/: page.tsx
frontend/src/app/structures/[id]/: TwinScene.tsx  page.tsx
frontend/src/components/: AIAssistant.tsx  BackgroundEffects.tsx  Bridge3D.tsx  CriticalAlertBanner.tsx  DigitalTwin.tsx  Sidebar.tsx  StatsCard.tsx  WaveletScalogram.tsx
frontend/src/hooks/: useAnomalySocket.ts
frontend/src/lib/: anomalySocket.ts  api.ts  structures.ts  utils.ts
infra/: docker-compose.yml  prometheus.yml
ml/: Dockerfile  README.md  create_risk_nb.py  main.py  pyproject.toml  server.py
ml/.ipynb_checkpoints/: README-checkpoint.md
ml/algos/wavelet_transform/: README.md  local_power_spectra.py  reliability_analysis.py  structural_response.py  utils.py  wavelet_fft.py
ml/data/: Analysis.ipynb  Risk_Prediction.ipynb  gallifrey_shm_analysis.ipynb
ml/data/.ipynb_checkpoints/: Analysis-checkpoint.ipynb  Risk_Prediction-checkpoint.ipynb  gallifrey_shm_analysis-checkpoint.ipynb
ml/data/models/: autoencoder.pt  gbm_risk_classifier.pkl  isolation_forest.pkl  lstm_risk.pt  model_meta.json  scaler.pkl  scaler_anomaly.pkl  scaler_ml.pkl  vae_state_dict.pth
ml/mock/: Dockerfile  __init__.py  dashboard.py  simulator.py  stream_client.py  visualize.py
ml/mock/results/: stream_results.csv
ml/tests/tests_wavelets/: test_lps.py  test_pipeline.py  test_reliability.py  test_structural_response.py  test_wavelet_transform.py
