[project]
name = "gallifrey"
version = "0.1.0"
description = "Agentic AI system for infrastructure structural intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "google-generativeai",
    "langgraph",
    "tiktoken",
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "unstructured",
    "python-docx",
    "beautifulsoup4",
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "streamlit>=1.55.0",
    "python-multipart>=0.0.22",
    "langchain-chroma>=1.1.0",
    "prometheus-client>=0.24.1",
    "reportlab>=4.4.4",
]
